Refactored file names; Added text shadow for improving readability; Fixed background image sizing;
v0.1.3;

--- a/src/panel/index.scss
+++ b/src/panel/index.scss
@@ -1,5 +1,6 @@
 html,
 body {
+  display: flex;
   width: 100%;
   height: 100%;
 }
