--- a/src/panel/view/Panel.scss
+++ b/src/panel/view/Panel.scss
@@ -1,8 +1,8 @@
 .content {
   display: flex;
-  height: 100%;
 
   .mainCard {
+    height: auto;
     background-image: url("../../assets/images/background.jpg");
     background-size: auto 100%;
     background-repeat: initial;
