--- a/src/panel/view/player-card/player-card.scss
+++ b/src/panel/view/player-card/player-card.scss
@@ -5,6 +5,7 @@
   margin-bottom: 5px;
   width: 230px;
   height: 50px;
+  text-shadow: 1px 1px 2px black;
 
   > .position {
     padding: 15px 0;
